<resources>
    <string name="app_name">Acquaint</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password </string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This userid or password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="case_drawer_title">Case</string>
    <string name="investigation_drawer_title">Investigations</string>
    <string name="signout_drawer_title">Sign Out</string>
    <string name="website_url">myacquaint.com</string>
    <string name="title_activity_indi_case">IndiCaseActivity</string>
    <string name="snackbar_no_connection">Data connection Unavailable</string>
    <string name="offline">Offline</string>
    <string name="filter">filter</string>
    <string name="refresh_menu">Refresh</string>
</resources>
