<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/case_menu_drawer"
            android:title="@string/case_drawer_title"
            android:icon="@drawable/ic_dashboard"
            />
        <item
            android:id="@+id/investigation_menu_drawer"
            android:title="@string/investigation_drawer_title"
            android:icon="@drawable/ic_forum"
            />

        <item android:id="@+id/offline_menu_drawer"
            android:title="@string/offline"
            android:icon="@drawable/ic_dns_black_36dp"/>


    </group>
    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/refresh_menu_drawer"
                android:title="@string/refresh_menu"
                android:icon="@drawable/ic_refresh_black_24dp" />

            <item
                android:id="@+id/signout_menu_drawer"
                android:title="@string/signout_drawer_title"
                android:icon="@drawable/ic_exit_to_app_black_24dp"
                />
        </menu>
    </item>
</menu>